WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
166975
OneDrive application crashes upon launch
https://bugs.webkit.org/show_bug.cgi?id=166975
Summary
OneDrive application crashes upon launch
youenn fablet
Reported
2017-01-12 09:38:20 PST
See radar 29910273. SubresourceLoader::willSendRequestInternal is calling ResourceLoader::willSendRequestInternal. App delegate code may cancel the load which will make m_resource null.
Attachments
Patch
(1.46 KB, patch)
2017-01-12 09:44 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-01-12 09:44:24 PST
Created
attachment 298692
[details]
Patch
youenn fablet
Comment 2
2017-01-12 12:50:42 PST
Any idea how to add a test for it? Ideally, we would need to have some delegate code cancelling the redirect load. Maybe we can simulate this code path using content extension blockers?
Brady Eidson
Comment 3
2017-01-12 13:01:45 PST
Comment on
attachment 298692
[details]
Patch Code change looks fine. I do think it's worth following up all leads on trying to get a test for this.
WebKit Commit Bot
Comment 4
2017-01-12 13:27:53 PST
Comment on
attachment 298692
[details]
Patch Clearing flags on attachment: 298692 Committed
r210679
: <
http://trac.webkit.org/changeset/210679
>
WebKit Commit Bot
Comment 5
2017-01-12 13:27:57 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6
2017-01-14 22:40:30 PST
Comment on
attachment 298692
[details]
Patch Can we make a test that covers this?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug