OneDrive application crashes upon launch https://bugs.webkit.org/show_bug.cgi?id=166975

Patch by Youenn Fablet <youenn@apple.com> on 2017-01-12
Reviewed by Brady Eidson.

Checking whether load is terminated just after calling ResourceLoader::willSendRequestInternal.
The reason is that delegate call may actually cancel the load at that point.

* loader/SubresourceLoader.cpp:
(WebCore::SubresourceLoader::willSendRequestInternal):

Canonical link: https://commits.webkit.org/184087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210679 268f45cc-cd09-0410-ab3c-d52691b4dbfc